# pointcloud_ground_segmentation

./: LICENSE  README.md
cloud_msgs/: CMakeLists.txt  package.xml
point_cloud_segmentation/: CMakeLists.txt  package.xml
point_cloud_segmentation/config/: ground_segmentation.yaml
point_cloud_segmentation/launch/: ground_segmentation_launch.py
point_cloud_segmentation/src/: GroundSegmentation.cpp  GroundSegmentation.h
