<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>point_cloud_segmentation</name>
  <version>1.0.0</version>
  <description>Point cloud segmentation from LeGO-LOAM implementation for ROS2 adapted by Alysson Ribeiro da Silva.</description>

  <maintainer email="alysson.ribeiro.silva@gmail.com.com">Alysson Ribeiro da Silva</maintainer>

  <author>Tixiao Shan</author>
  <author>Davide Faconti</author>
  <author>Eduardo Perdices</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>cloud_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>cloud_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
